<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology_logo_48dp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/author_title"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toStartOf="@+id/bMenu"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/author_title_date"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
        app:layout_constraintEnd_toStartOf="@+id/bMenu"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <Button
        android:id="@+id/bMenu"
        style="@style/StyleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_button_menu"
        app:icon="@drawable/baseline_more_vert_24"
        app:iconSize="@dimen/button_size"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivLogo"
        app:tint="@color/menu_tint" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ivLogo, date, bMenu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/text_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@+id/videoView"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/postVideoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@android:color/background_light"
        android:visibility="gone"
        app:constraint_referenced_ids="videoView, videoTitleView" />

    <ImageView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@id/videoTitleView"
        android:src="@drawable/course_cover"
        />
    <TextView
        android:id="@+id/videoTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintBottom_toTopOf="@id/barrier_content"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbFavorite"
        style="@style/StyleLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/description_button_favorite"
        android:text="@string/count_likes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/count_color"
        android:textSize="@dimen/text_size"
        app:icon="@drawable/ic_like"
        app:iconSize="@dimen/button_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_content"
        app:srcCompat="@drawable/baseline_favorite_border_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbShare"
        style="@style/StyleShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_button_share"
        android:text="@string/count_share"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/share_tint"
        android:textSize="16sp"
        app:icon="@drawable/baseline_share_24"
        app:iconSize="24dp"
        app:layout_constraintStart_toEndOf="@id/mbFavorite"
        app:layout_constraintTop_toBottomOf="@id/barrier_content"
        app:tint="@color/share_tint" />

    <TextView
        android:id="@+id/numberOfViews"
        android:layout_width="@dimen/distance_for_counters"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/count_view"
        android:textSize="@dimen/text_size"
        android:textColor="@color/count_color"
        app:layout_constraintBottom_toBottomOf="@id/mbFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />

    <ImageButton
        android:id="@+id/ibView"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_button_view"
        app:layout_constraintEnd_toStartOf="@id/numberOfViews"
        app:layout_constraintTop_toBottomOf="@id/barrier_content"
        app:srcCompat="@drawable/baseline_visibility_24" />


</androidx.constraintlayout.widget.ConstraintLayout>